criacao do ranking, mapa

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RoleTrip</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 
 
@@ -17,13 +17,13 @@
 
         <img src="img/logo.png"  class="logo" alt="">
 
-        <h1>RoleTrip</h1>
+        <h1><a href="index.html">RoleTrip</a></h1>
 
         <ul>
-            <li><a href="">Login </a></li>
+            <li><a href="login/login.html">Login </a></li>
             <li><a href="">|</a></li>
-            <li><a href="">Mapa</a></li>
-            <li><a href="">Raking</a></li> 
+            <li><a href="mapa/mapa.html">Mapa</a></li>
+            <li><a href="ranking/ranking.html">Ranking</a></li> 
 
         </ul>
 
@@ -35,7 +35,7 @@
         <div class="card">
 
             <div class="inline" >
-            <img src="img/bemvindo.png" class="boasvindas" alt="">
+            <img src="img/bemvindo.png" class="boasvindas" alt="" >
             <img src="img/balão.png" class="balão" alt="">
         </div>
 
@@ -43,7 +43,7 @@
 
             <h2>
             <p>Estamos muito felizes pela sua visita. </p>
-            <p>esperamos que esteja disposto a conhecer novos lugares</p>
+            <p>Esperamos que esteja disposto a conhecer novos lugares</p>
             <p>pois é o que você vai encontrar aqui. Nosso maior objetivo é</p>
             <p></p>
             </h2>
