--- a/login/login.html
+++ b/login/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Formulário</title>
+    <title>Login</title>
 
-    <link rel="stylesheet" href="formulario.css">
+    <link rel="stylesheet" href="login.css">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 
 
@@ -17,13 +17,13 @@
 
         <img src="../img/logo.png"  class="logo" alt="">
 
-        <h1>RoleTrip</h1>
+        <h1><a href="../index.html">RoleTrip</a></h1>
 
         <ul>
-            <li><a href="">Login </a></li>
+            <li><a href="login.html">Login </a></li>
             <li><a href="">|</a></li>
-            <li><a href="">Mapa</a></li>
-            <li><a href="">Raking</a></li> 
+            <li><a href="../mapa/mapa.html">Mapa</a></li>
+            <li><a href="../ranking/ranking.html">Ranking</a></li> 
 
         </ul>
 
@@ -45,6 +45,7 @@
             <div>
                 <button class="btn btn-1">Entrar</button>
                 <button class="btn btn-2">Esqueceu a senha?</button>
+                <button class="btn btn-1"><a href="../cadastre-se/cadastre-se.html">Cadastre-se</a></button>
             </div>
         
 
