site-trip-apresentado

--- a/login/login.html
+++ b/login/login.html
@@ -44,7 +44,7 @@
 
             <div>
                 <button class="btn btn-1">Entrar</button>
-                <button class="btn btn-2">Esqueceu a senha?</button>
+                <button class="btn btn-2"><a href="../senha/senha.html">Esqueceu a senha?</a></button>
                 <button class="btn btn-1"><a href="../cadastre-se/cadastre-se.html">Cadastre-se</a></button>
             </div>
         
