--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -39,11 +39,13 @@
         
         <div>
             <div  class="margem">
-                <img src="../img/nt-2.jpg" class="img-1" alt="">
+
+                <a href="../conteudo/conteudo.html"><img src="../img/nt-2.jpg" class="img-1" alt=""></a>
                 <h3>John Smith
                     <small> Casa da luz </small>
                 </h3>
-                <p>Fácil acesso, lugar rústico. Só rola uma preocupação leve na hora que a gente sai da balada, porque o centrão é complicado, mas o ambiente é mto bom.</p>
+                <p>Fácil acesso, lugar rústico. Só rola uma preocupação leve na hora que a 
+                    gente sai da balada, porque o centrão é complicado, mas o ambiente é mto bom.</p>
             </div>
 
             <div  class="margem">
@@ -51,8 +53,10 @@
                 <h3>Júlia Coelho
                     <small>Casa das caldeiras</small>
                 </h3>
-                <p>Fui em um dos eventos de domingo, e foi muito bom, o ambiente é muito limpo, organizado, com seguranças, as pessoas são educadas, do jeito que eu gosto!
-                    Gostaria de voltar em outro dia para conhecer o restante da casa das caldeiras, pois somente a parte superior (ou o que fizeram de salão) estava aberta ao público</p>
+                <p>Fui em um dos eventos de domingo, e foi muito bom, o ambiente é muito limpo, 
+                    organizado, com seguranças, as pessoas são educadas, do jeito que eu gosto!
+                    Gostaria de voltar em outro dia para conhecer o restante da casa das caldeiras, 
+                    pois somente a parte superior (ou o que fizeram de salão) estava aberta ao público</p>
             </div>
 
             <div  class="margem">
@@ -60,7 +64,9 @@
                 <h3>Carlos Savi
                     <small> exposição Castelo RA-TIM-BUM</small>
                 </h3>
-                <p>Fui no memorial pela prieira vez ver a exposição com meu filho e amei! o preço é super acessivel, mioot lindo, sai de lá encantada relembrando os meus velhos tempos. Super recomendo!!!!!! </p>
+                <p>Fui no memorial pela prieira vez ver a exposição com meu filho e amei! o preço é 
+                    super acessivel, mioot lindo, sai de lá encantada relembrando os meus velhos tempos. 
+                    Super recomendo!!!!!! </p>
             </div>
 
             <div class="margem"> 
@@ -69,7 +75,11 @@
                 <h3>LAB CLUB
                     <small>Luara Silva</small>
                 </h3>
-                <p>Fui a casa no dia 27 de Janeiro de 2018 super bem recebido pela hostess, seguranças, caixas, bares e toda a equipe no geral. Ocorreu um fato super desagradável onde um rapaz assediou uma amiga minha notifiquei os seguranças e de prontidão com muita cordialidade expulsaram o sujeito. Além disso prestaram suporte para nós e nossa amiga e expulsaram o rapaz sem nenhum tipo de agressão. Voltarei mais vezes</p>
+                <p>Fui a casa no dia 27 de Janeiro de 2018 super bem recebido pela hostess, seguranças, 
+                    caixas, bares e toda a equipe no geral. Ocorreu um fato super desagradável onde um 
+                    rapaz assediou uma amiga minha notifiquei os seguranças e de prontidão com muita 
+                    cordialidade expulsaram o sujeito. Além disso prestaram suporte para nós e nossa amiga 
+                    e expulsaram o rapaz sem nenhum tipo de agressão. Voltarei mais vezes</p>
             </div>
         </div>
 
